[package]
name = "exper_kademlia_gpt4"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.160", features = ["derive"] }

[dev-dependencies]
once_cell = "1.17.1"
rand = "0.8.5"
tokio = { version = "1.28.0", features = ["full"] }
